--- a/BookApp/Source/Main.storyboard
+++ b/BookApp/Source/Main.storyboard
@@ -95,6 +95,77 @@
             </objects>
             <point key="canvasLocation" x="1030.7692307692307" y="-2.1327014218009479"/>
         </scene>
+        <!--Detail Book View Controller-->
+        <scene sceneID="RBe-IM-qa4">
+            <objects>
+                <viewController storyboardIdentifier="DetailBookViewController" id="TCz-UA-y2E" customClass="DetailBookViewController" customModule="BookApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lKY-XF-jrb">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="2IX-8w-o45">
+                                <rect key="frame" x="120" y="67.000000000000014" width="150" height="240.33333333333337"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hm5-AY-KFR">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="180"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="41X-NO-Cy6"/>
+                                            <constraint firstAttribute="height" constant="180" id="T07-WK-PiX"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="책 제목" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ycm-Re-hxB">
+                                        <rect key="frame" x="47" y="188" width="56.333333333333343" height="24"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="오사카 토미오" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xp7-7n-Rzr">
+                                        <rect key="frame" x="28.666666666666664" y="220" width="92.666666666666686" height="20.333333333333343"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="ypL-Xf-7Hd">
+                                <rect key="frame" x="0.0" y="327.33333333333331" width="390" height="516.66666666666674"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="fF2-MB-R4a">
+                                        <rect key="frame" x="0.0" y="50" width="390" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fF2-MB-R4a" id="9M8-g3-E8s">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="XUr-MO-fkI">
+                                        <rect key="frame" x="0.0" y="93.666667938232422" width="390" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XUr-MO-fkI" id="78S-nH-Fje">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <sections/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="V3d-HN-ByO"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ypL-Xf-7Hd" firstAttribute="top" secondItem="2IX-8w-o45" secondAttribute="bottom" constant="20" id="J0g-wA-sAt"/>
+                            <constraint firstItem="2IX-8w-o45" firstAttribute="centerX" secondItem="lKY-XF-jrb" secondAttribute="centerX" id="T3g-20-Llo"/>
+                            <constraint firstItem="ypL-Xf-7Hd" firstAttribute="leading" secondItem="V3d-HN-ByO" secondAttribute="leading" id="ftg-SU-FG1"/>
+                            <constraint firstItem="2IX-8w-o45" firstAttribute="top" secondItem="V3d-HN-ByO" secondAttribute="top" constant="20" id="gg8-oA-v7W"/>
+                            <constraint firstAttribute="bottom" secondItem="ypL-Xf-7Hd" secondAttribute="bottom" id="guT-KN-nDB"/>
+                            <constraint firstItem="V3d-HN-ByO" firstAttribute="trailing" secondItem="ypL-Xf-7Hd" secondAttribute="trailing" id="k3v-x4-Zhs"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="T1p-Th-e9W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1853.8461538461538" y="-2.1327014218009479"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="B1K-WR-Yav">
             <objects>
